# Apprenticeship-Learning-via-Inverse-Reinforcement-Learning

./: Apprenticeship_Inverse_Reinforcement_Learning.ipynb  Bayesian Inverse Reinforcement Learning.md  README.md  agent.py  cartagent.py  cartpole_agent.py  frozenlake_agent.py  frozenlake_irl.py  gridworld.py  gridworld_irl.py  implemented_game.ipynb  irl2.py  policyIteration.py  policyWalk.ipynb  pyproject.toml
