[tool.poetry]
name = "bayesian-inverse-rl"
version = "0.1.0"
description = ""
authors = ["Vinícius Sousa <vinicius.antunes@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
