[tool.poetry]
name = "bayesian-inverse-rl"
version = "0.1.0"
description = ""
authors = ["Vinícius Sousa <vinicius.antunes@proton.me>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
gym = "^0.26.2"
seaborn = "^0.13.2"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
torch = {version = "^2.3.1+cpu", source = "pytorch"}
torch-sgld = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
